--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
     background-image: url(img.jpg);
     background-size: cover;
     width: 35%;
+    height: 100vh;
 }
 
 img {
@@ -60,7 +61,7 @@ img {
 }
 
 h1 {
-    margin:30px 0px;
+    margin: 30px 0px;
     font-family: "Norse", sans-serif;
 }
 
@@ -68,7 +69,8 @@ h1 {
     display: flex;
     flex-direction: column;
     width: 65%;
-    height: 100vh;
+    overflow-x: hidden; /* Hide horizontal overflow */
+    overflow-y: auto; /* Add vertical scrollbar if necessary */
 }
 
 #sec1 {
@@ -76,18 +78,16 @@ h1 {
     background-color: var(--background-color2);
     font-size: 1.8rem;
     font-weight: 600;
-    padding: 10vh 19vw 6vh 3vw;
+    padding: 90px 100px 70px 50px;
 }
 
 #sec2 {
-
 }
 
 #formDiv {
     background-color: var(--background-color1);
-    padding: 2vh 3vw;
+    padding: 10px 53px;
     border: none;
-    
 }
 
 #formDiv > h2 {
@@ -97,7 +97,7 @@ h1 {
 
 #btnDiv {
     background-color: var(--background-color2);
-    padding: 5vh 3vw;
+    padding: 50px 50px;
     border: none;
     margin: 0px;
 }
@@ -110,7 +110,7 @@ h1 {
     flex:1;
     display: flex;
     flex-direction: column;
-    margin-bottom: 30px;
+    margin-top: 20px;
 }
 
 form input {
@@ -150,7 +150,7 @@ form input:focus {
 
 #sec3 {
     background-color: var(--background-color2);
-    padding: 0vh 3vw;
+    padding: 0vh 50px;
     padding-bottom: 0%;
     flex: 1;
 }
